Fix horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -1677,6 +1677,7 @@ body {
 .wrapper {
   position: relative;
   top: 80px;
+  overflow: hidden;
 }
 a:hover,
 a:focus,
